tests/NormalTests/paczka1/fuzzy1/82004051.err
Error in line 1: VnRIANr9uxw S68 48,5
Error in line 6: HWR S917 39,6
Error in line 9: lMp S917 48,76
Error in line 15: lMp S515 57,1
Error in line 16: lMp S917 16,3
Error in line 5: VnRIANr9uxw S515 95,9
Error in line 23: VnRIANr9uxw S68 24,5
Error in line 30: LEzomGB S68 30,5
